# vggt

./: .gitattributes  .gitignore  README.md  cli_demo.py  colmap_reader.py  colmap_writer.py  demo_colmap.py  demo_gradio.py  demo_viser.py  deneme.txt  deneme2.txt  export_cam_pose.py  high_quality_scene.glb  merged_scene.glb  npz_reader.py  pyproject.toml  reconstruct.py  requirements.txt  requirements_demo.txt  subtract_rows.py  vggt_to_colmap.py  visual_util.py
avt_vggt/: eval_debug.py  sa2va_test.py  temp_distill.py  temp_test.py  train_debug.py  vggt_agent.py
avt_vggt/configs/: vggt_config.py  vggt_exp_config.py  vggt_train.yaml
avt_vggt/debug_runs/def_test/: args.yaml  exp_cfg.yaml  vggt_cfg.yaml
avt_vggt/debug_runs/vggtact_debug/: args.yaml  exp_cfg.yaml  vggt_cfg.yaml
avt_vggt/models/: avt_vggt.py  avt_vggt_single.py
avt_vggt/renderers/: ray_renderer.py  rvt_renderer.py
avt_vggt/utils/: custom_colosseum_env.py  dataset_utils.py  env_utils.py  log_utils.py  mvt_utils.py  network_utils.py  trainer_utils.py  vggt_utils.py
avt_vggt/wandb/: latest-run
avt_vggt/waypoint_extraction/: extract_waypoints.py  select_keyframe.py  traj_reconstruction.py
docs/: package.md
training/: README.md  launch.py  trainer.py
training/config/: default.yaml
training/data/: dataset_util.py
training/data/datasets/: co3d.py  vkitti.py
vggt/dependency/: np_to_pycolmap.py
vggt/heads/: camera_head.py  dpt_head.py  utils.py
vggt/layers/: attention.py  block.py  vision_transformer.py
vggt/models/: aggregator.py  vggt.py
vggt/utils/: load_fn.py  pose_enc.py
(+6 files in other folders)
